--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -5421,3 +5421,6 @@ ul.iconic-list li a:hover, ul.iconic-list li.active a {
     width: 40%;
     margin: 15px auto;
 }
+#bayar{
+    background-color: #4682B4 !important;
+}
